优化：增加打印堆栈信息+号